--- a/src/p2-homeworks/h1/Message.module.css
+++ b/src/p2-homeworks/h1/Message.module.css
@@ -12,10 +12,10 @@
   width: 300px;
   padding: 10px;
   border-radius: 10px 10px 10px 0;
-  background: #4d5156;
+  /*background: #4d5156;*/
+  background: rgba(77, 81, 86, 0.8);
   color: #bbfbbc;
   margin-left: 20px;
-  /*border-radius: 10px;*/
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -49,7 +49,12 @@
 .text__message {
   font-size: 18px;
   margin: 0;
+  word-wrap: break-word;
 
+}
+
+.text {
+  max-width: 300px;
 }
 
 .text__time {
