--- a/src/p2-homeworks/h2/Affairs.module.css
+++ b/src/p2-homeworks/h2/Affairs.module.css
@@ -1,21 +1,39 @@
-.someClass {
+.affair__list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.filters {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  padding-left: 50px;
 
 }
 
 .name {
   margin: 10px;
   padding: 5px;
-  background-color: rgba(255, 105, 80, 0.8);
+  border-width: 2px;
+  border-style: solid;
   border-radius: 5px;
   width: 150px;
+  background-color: rgba(222, 144, 218, 0.6);
+
 }
 
 .priority {
   padding: 5px;
   margin: 10px;
-  background-color: rgba(220, 20, 60, 0.8);
+  background-color: rgba(220, 20, 60, 0.4);
+  border-width: 2px;
+  border-style: solid;
   border-radius: 5px;
   width: 90px;
+  text-align: center;
+  box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2);
+
 }
 
 .affair {
@@ -25,6 +43,19 @@
 }
 
 .button__delete {
-  background-color: rgb(165, 42, 42);
-  border-radius: 50%;
+  border: none;
+  outline: none;
+  background: none;
+  padding: 0;
+}
+
+.btn__filter {
+  border: 2px solid rgb(92, 44, 89);
+
+  background-color: rgba(138, 73, 134, 0.8);
+  color: white;
+  margin: 5px;
+  padding: 5px;
+  border-radius: 5px;
+
 }
