--- a/src/p2-homeworks/h3/Greeting.module.css
+++ b/src/p2-homeworks/h3/Greeting.module.css
@@ -2,6 +2,63 @@
 
 }
 
-.error {
-    border: 1px solid red;
+.input__error {
+  border: 2px solid red !important;
+}
+
+.title__error {
+  color: red !important;
+}
+
+.input {
+  display: block;
+  width: 300px;
+  padding: 0 20px;
+  margin-bottom: 10px;
+  background: #E9EFF6;
+  line-height: 40px;
+  border-width: 0;
+  border-radius: 20px;
+  font-family: 'Roboto', sans-serif;
+}
+
+.formWrapper {
+  width: 500px;
+  border-radius: 10px;
+  padding: 50px;
+  background-color: rgba(247, 228, 242, 0.95);
+  box-shadow: 13px 8px 4px -2px rgba(37, 46, 52, 0.41);
+}
+
+.totalUsers {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.btn {
+  width: 150px;
+  margin-top: 30px;
+  background: rgba(138, 73, 134, 0.8);
+  border-bottom: solid #d87d56;
+  color: white;
+  font-size: 14px;
+  display: block;
+  padding: 0 20px;
+  margin-bottom: 10px;
+  line-height: 40px;
+  border-width: 0;
+  border-radius: 20px;
+  font-family: 'Roboto', sans-serif;
+
+}
+
+
+.form__title {
+  margin-top: 0;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  font-size: 24px;
+  color: #707981;
 }
