--- a/src/p2-homeworks/h2/Affairs.module.css
+++ b/src/p2-homeworks/h2/Affairs.module.css
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  padding-left: 50px;
+  padding-left: 20px;
 
 }
 
@@ -51,7 +51,7 @@
 
 .btn__filter {
   border: 2px solid rgb(92, 44, 89);
-
+  width: 60px;
   background-color: rgba(138, 73, 134, 0.8);
   color: white;
   margin: 5px;
