--- a/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
+++ b/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
@@ -1,12 +1,27 @@
 .superInput {
-
+  display: block;
+  margin: 10px;
+  padding: 0 10px;
+  background: #FFF;
+  line-height: 30px;
+  border-radius: 5px;
+  font-family: 'Roboto', sans-serif;
+  outline: none;
+  border: 1px solid #838996
 }
 
 .errorInput {
-    border: 3px solid lime;
-    background: red;
+  display: block;
+  margin: 10px;
+  padding: 0 10px;
+  background: #FFF;
+  line-height: 30px;
+  border-radius: 5px;
+  font-family: 'Roboto', sans-serif;
+  outline: none;
+  border: 1px solid red
 }
 
 .error {
-    color: red;
+  color: red;
 }
