--- a/src/p2-homeworks/h3/Greeting.module.css
+++ b/src/p2-homeworks/h3/Greeting.module.css
@@ -38,18 +38,15 @@
 }
 
 .btn {
-  width: 150px;
-  margin-top: 30px;
-  background: rgba(138, 73, 134, 0.8);
-  border-bottom: solid #d87d56;
-  color: white;
+  width: 100px;
+  background: rgba(138, 73, 134, 0.8) !important;
+  box-shadow: 4px 3px 8px -2px rgba(34, 60, 80, 0.56);
+  color: white !important;
   font-size: 14px;
   display: block;
-  padding: 0 20px;
   margin-bottom: 10px;
-  line-height: 40px;
   border-width: 0;
-  border-radius: 20px;
+  border-radius: 10px;
   font-family: 'Roboto', sans-serif;
 
 }
