--- a/src/p2-homeworks/h4/HW4.module.css
+++ b/src/p2-homeworks/h4/HW4.module.css
@@ -1,13 +1,17 @@
 .blue {
-    border-bottom: 5px solid blue;
+  border-bottom: 5px solid blue;
 }
 
 .column {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .testSpanError {
-    color: blue;
+  color: blue;
+}
+
+.shadow {
+  box-shadow: 4px 4px 8px 0 rgba(34, 60, 80, 0.2);
 }
