--- a/src/p2-homeworks/h4/common/c3-SuperCheckbox/SuperCheckbox.module.css
+++ b/src/p2-homeworks/h4/common/c3-SuperCheckbox/SuperCheckbox.module.css
@@ -1,7 +1,19 @@
 .checkbox {
-
+  /*appearance: none;*/
+  /*width: 20px;*/
+  /*height: 20px;*/
+  /*margin-right: 10px;*/
+  /*background-color: #bbfbbc;*/
 }
 
 .spanClassName {
 
+}
+
+apply {
+
+}
+
+.checkbox:checked {
+  /*appearance: none;*/
 }
