--- a/src/p2-homeworks/h2/Affairs.module.css
+++ b/src/p2-homeworks/h2/Affairs.module.css
@@ -17,6 +17,7 @@
   border-width: 2px;
   border-style: solid;
   border-radius: 5px;
+  border-color: #838996;
   width: 150px;
   background-color: rgba(222, 144, 218, 0.6);
 
@@ -31,6 +32,7 @@
   border-radius: 5px;
   width: 90px;
   text-align: center;
+  border-color: #838996;
   box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2);
 
 }
