--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,9 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /*background-image: url(https://oir.mobi/uploads/posts/2021-03/1616990293_11-p-fon-dlya-risovaniya-12.jpg);*/
 }
 
 code {
@@ -14,3 +14,22 @@ code {
   monospace;
 }
 
+.row {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+}
+
+.title__hw {
+  padding: 5px;
+  text-decoration: none;
+  color: #181818;
+  font-weight: bold;
+  border-bottom: 2px solid #F1A1B1;
+}
