--- a/src/p2-homeworks/h2/Affairs.module.css
+++ b/src/p2-homeworks/h2/Affairs.module.css
@@ -2,63 +2,71 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+
+.affair__wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  background-color: #F5DCD1;
+  padding: 5px;
 }
 
 .filters {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  padding-left: 20px;
 }
 
 .name {
-  margin: 10px;
-  padding: 5px;
-  border-width: 2px;
-  border-style: solid;
-  border-radius: 5px;
-  border-color: #838996;
-  width: 150px;
-  background-color: rgba(222, 144, 218, 0.6);
-
+  width: 200px;
+  background-color: #F5DCD1;
+  font-size: 20px;
+  font-weight: bold;
 }
 
 .priority {
-  padding: 5px;
-  margin: 10px;
-  background-color: rgba(220, 20, 60, 0.4);
-  border-width: 2px;
-  border-style: solid;
-  border-radius: 5px;
-  width: 90px;
-  text-align: center;
-  border-color: #838996;
-  box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2);
+  width: 100px;
+  font-size: 15px;
+  padding-left: 5px;
+  color: #4D5058;
+}
 
+.circle {
+  width: 5px;
+  height: 5px;
+  background: #4D5058;
+  border-radius: 50%;
 }
 
 .affair {
   display: flex;
   flex-direction: row;
   align-items: center;
+  margin-bottom: 10px;
+  justify-content: flex-start;
+  padding: 5px;
+  border: 1px solid #B7BEC9;
 }
 
 .button__delete {
   border: none;
   outline: none;
   background: none !important;;
-  color: red !important;
   padding: 0 !important;
+  color: #bbfbbc;
 }
 
 .btn__filter {
   border: 2px solid rgb(92, 44, 89);
   width: 60px;
-  background-color: rgba(138, 73, 134, 0.8) !important;
+  font-size: 15px !important;
+  background-color: #B7BEC9 !important;
   color: white !important;
   margin: 5px !important;
   padding: 5px !important;
-  border-radius: 5px;
 }
 
 .active {
