--- a/src/p2-homeworks/h2/Affairs.module.css
+++ b/src/p2-homeworks/h2/Affairs.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   padding: 10px;
 }
 
@@ -12,9 +12,10 @@
   justify-content: flex-start;
   background-color: #F5DCD1;
   padding: 5px;
+  padding-left: 10px;
 }
 
-.filters {
+.filters__btn {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -47,8 +48,8 @@
   align-items: center;
   margin-bottom: 10px;
   justify-content: flex-start;
-  padding: 5px;
-  border: 1px solid #B7BEC9;
+  border: 1px solid #F5DCD1;
+  width: 247px;
 }
 
 .button__delete {
@@ -65,8 +66,19 @@
   font-size: 15px !important;
   background-color: #B7BEC9 !important;
   color: white !important;
+  padding: 5px !important;
+  box-shadow: 3px 3px 5px -1px rgba(37, 46, 52, 0.41);
+}
+
+.btn__filter_active {
+  border: 2px solid rgb(92, 44, 89);
+  width: 60px;
+  font-size: 15px !important;
+  background-color: #F5DCD1 !important;
+  color: #4D5058 !important;
   margin: 5px !important;
   padding: 5px !important;
+  box-shadow: 1px 1px 5px -1px rgba(37, 46, 52, 0.41);
 }
 
 .active {
