--- a/src/p2-homeworks/h3/Greeting.module.css
+++ b/src/p2-homeworks/h3/Greeting.module.css
@@ -23,11 +23,11 @@
 }
 
 .formWrapper {
-  width: 500px;
+  width: 400px;
   border-radius: 10px;
   padding: 50px;
-  background-color: rgba(247, 228, 242, 0.95);
-  box-shadow: 13px 8px 4px -2px rgba(37, 46, 52, 0.41);
+  background-color: #F5DCD1;
+  box-shadow: 8px 8px 10px -2px rgba(37, 46, 52, 0.41);
 }
 
 .totalUsers {
@@ -37,7 +37,7 @@
   align-items: center;
 }
 
-.btn {
+.btn__add {
   width: 100px;
   background: rgba(138, 73, 134, 0.8) !important;
   box-shadow: 4px 3px 8px -2px rgba(34, 60, 80, 0.56);
@@ -48,7 +48,7 @@
   border-width: 0;
   border-radius: 10px;
   font-family: 'Roboto', sans-serif;
-
+  margin-top: 10px;
 }
 
 
