--- a/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
+++ b/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
@@ -15,7 +15,7 @@
   border-radius: 5px;
   font-weight: bold;
   background-color: #F1A1B1;
-  color: #FFFFFF !important;
+  color: #FFFFFF;
   margin: 5px;
   font-size: 20px;
 }
