change css hw1-4

--- a/src/p2-homeworks/h2/Affairs.module.css
+++ b/src/p2-homeworks/h2/Affairs.module.css
@@ -58,6 +58,7 @@
   background: none !important;;
   padding: 0 !important;
   color: #bbfbbc;
+  width: 20px;
 }
 
 .btn__filter {
@@ -84,3 +85,4 @@
 .active {
   box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
 }
+
