--- a/src/p2-homeworks/h2/Affairs.module.css
+++ b/src/p2-homeworks/h2/Affairs.module.css
@@ -8,8 +8,8 @@
 
 .affair__wrapper {
   display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
+  /*flex-direction: column;*/
+  /*justify-content: flex-start;*/
   background-color: #F5DCD1;
   padding: 5px;
   padding-left: 10px;
@@ -22,17 +22,27 @@
 }
 
 .name {
-  width: 200px;
+  /*width: 200px;*/
+  width: 150px;
   background-color: #F5DCD1;
   font-size: 20px;
   font-weight: bold;
 }
 
-.priority {
+.priority__wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: flex-end;
   width: 100px;
-  font-size: 15px;
+}
+
+.priority {
+  font-size: 13px;
   padding-left: 5px;
   color: #4D5058;
+  text-align: right;
+
 }
 
 .circle {
@@ -40,6 +50,7 @@
   height: 5px;
   background: #4D5058;
   border-radius: 50%;
+  margin-bottom: 5px;
 }
 
 .affair {
@@ -47,9 +58,10 @@
   flex-direction: row;
   align-items: center;
   margin-bottom: 10px;
-  justify-content: flex-start;
+  justify-content: space-between;
   border: 1px solid #F5DCD1;
-  width: 247px;
+  /*width: 247px;*/
+  width: 300px;
 }
 
 .button__delete {
